--- a/characters.html
+++ b/characters.html
@@ -39,7 +39,7 @@
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
-			<img src="img/logo.png" alt="logo">
+			<img src="img/logoGoodlyDid.png" alt="logo">
 		</a>
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
 	<!-- Page top section end -->
 
 <!-- Character section 1 -->
-	<section class="characters-section character-two">
+	<section class="characters-section character-two" id="brandon">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 offset-lg-5">
@@ -72,8 +72,8 @@
 						<img src="img/game-characters/title-icon.png" alt="">
 						<h2>The Commander</h2>
 						<h5>Mortal Name: Brandon</h5>
-						<h5>Aliases: N3rd B0i</h5>
-						<br><br><br><br><br><p>The Commander has spent much time in the IT realm. Rumor had it, he was an Assitant Network Administrator at his highschool during his senior year. He has since gone to 2 separate Post-secondary schools to raise his levels of IT skills. The soldier was in charge of the team that created the site you are viewing!</p><br><br><br><br><br>
+						<h5>Aliases: Xbox_Otaku, Xbot</h5>
+						<br><br><br><br><br><p>The Commander has spent much time in the IT realm. Rumor has it, he was an Assitant Network Administrator at his highschool during his senior year. He has since gone to 2 separate Post-secondary schools to raise his levels of IT skills. The soldier was in charge of the team that created the site you are viewing!</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-1" data-cpvalue="70" data-cpcolor="#33cc33"></div>
@@ -104,7 +104,7 @@
 	<!-- Character section 1 end -->
 
 	<!-- Character section 2 -->
-	<section class="characters-section character-one">
+	<section class="characters-section character-one" id="evan">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
@@ -144,7 +144,7 @@
 	<!-- Character section 2 end -->
 
 	<!-- Character section 3 -->
-	<section class="characters-section character-three">
+	<section class="characters-section character-three" id="winter">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
@@ -187,7 +187,7 @@
 	<div class="footer-section">
 		<div class="container">
 			<center><div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> <a style="cursor: default;">by</a> <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div></center>
 		</div>
 	</div>
