--- a/eventsOld.html
+++ b/eventsOld.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<script>
-			var url = 'https://capstone-b35a3.firebaseio.com/data.json';
+			var url = 'https://app.fakejson.com/q/Ce77jUtM?token=0Kx7Q8ciy6IeVpDqaRRmew';
 			var vm = new Vue({
 				el: '#app',
 				data:{ 
