--- a/news.html
+++ b/news.html
@@ -39,7 +39,7 @@
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
-			<img src="img/logo.png" alt="logo">
+			<img src="img/logoGoodlyDid.png" alt="logo">
 		</a>
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
@@ -213,7 +213,7 @@
 	<div class="footer-section">
 		<div class="container">
 			<center><div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> <a style="cursor: default;">by</a> <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div></center>
 		</div>
 	</div>
