--- a/test.html
+++ b/test.html
@@ -7,17 +7,14 @@
 		<div id="app">
 			<div class="container">
 
-				<div v-for="(event) in events">
-					<h1>{{event.name}}</h1>
-					<h3>{{event.date}}</h3>
-					<p>{{event.description}}</p>
-					<span v-if="event.blogLink != 'N/A'">
-						<a :href="event.blogLink">Read Our Blog</a>
-					</span>
-					<br>
-					<span v-if="event.eventLink != 'N/A'">
-						<a :href="event.eventLink">Learn More</a>
-					</span>
+				<div v-for="(blog) in blogs">
+					<h1>{{blog.title}}</h1>
+					<h2>{{blog.author}}</h2>
+					<h3>{{blog.date}}</h3>
+					<p>{{blog.exerpt}}</p>
+					<p>{{blog.body}}</p>
+					<a :href="blog.link">Read More</a>
+					<p>{{blog.tag}}</p>
 				</div>
 			</div>
 		</div>
@@ -27,17 +24,17 @@
 			var vm = new Vue({
 				el: '#app',
 				data:{ 
-					events: []
+					blogs: []
 				},
 				created: function(){
-                    this.fetchEvents();
+                    this.fetchBlogs();
                 },
                 methods:{
-                    fetchEvents: function(){
+                    fetchBlogs: function(){
                         axios.get(url).then(
                             function(res){
-                                console.log(res.data.events);
-                                vm.events = res.data.events;
+                                console.log(res.data.blogs);
+                                vm.blogs = res.data.blogs;
                             }
                         );
 					}
