--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
 	<!-- Footer section -->
 	<div class="footer-section">
 		<div class="container">
+			<a href="img/">Images</a>
 			<center><div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> <a style="cursor: default;">by</a> <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div></center>
