--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<!--single-post.html blogs-->
 		</ul>
 	</header>
-	<!-- Header section end -->
+	<!-- Header section end --><!--test-->
 
 	<!-- Hero section -->
 	<section class="hero-section">
