--- a/characters.html
+++ b/characters.html
@@ -111,20 +111,20 @@
 					<div class="character-info">
 						<img src="img/game-characters/title-icon.png" alt="">
 						<h2>The Judge</h2>
-						<h5>Users: 4.8</h5>
-						<h5>MetaCritic: 4.5</h5>
+						<h5>Mortal Name: </h5>
+						<h5>Aliases: PavakTheCyphlyn, Marshbird</h5>
 						<br><br><br><br><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-5" data-cpvalue="70" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-5" data-cpvalue="30" data-cpcolor="#33cc33"></div>
 								<h4>Programming</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-6" data-cpvalue="30" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-6" data-cpvalue="45" data-cpcolor="#33cc33"></div>
 								<h4>Cloud</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-7" data-cpvalue="90" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-7" data-cpvalue="85" data-cpcolor="#33cc33"></div>
 								<h4>Networking</h4>
 							</div>
 							<div class="cp-item">
@@ -151,24 +151,24 @@
 					<div class="character-info">
 						<br><br><img src="img/game-characters/title-icon.png" alt="">
 						<h2>The Princess</h2>
-						<h5>Users: 4.8</h5>
-						<h5>MetaCritic: 4.5</h5>
-						<br><br><br><br><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
+						<h5>Mortal Name: Winter</h5>
+						<h5>Aliases: Wandering Winter, Disnerdgal, Phoenix Holmes</h5>
+						<br><br><br><br><br><p>The princess was born into a kingdom of code and technology. She has been trained in its ways by the king of the land from a young age. She hopes to make a pact with the kingdom of cloud technologies to learn their ways. Despite hating coffee and snakes, she loves Java and Python programming. The princess took charge and completed the back-end code for this site.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-9" data-cpvalue="70" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-9" data-cpvalue="90" data-cpcolor="#33cc33"></div>
 								<h4>Programming</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-10" data-cpvalue="35" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-10" data-cpvalue="25" data-cpcolor="#33cc33"></div>
 								<h4>Cloud</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-11" data-cpvalue="90" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-11" data-cpvalue="30" data-cpcolor="#33cc33"></div>
 								<h4>Networking</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-12" data-cpvalue="45" data-cpcolor="#33cc33"></div>
+								<div class="circle-progress" data-cpid="id-12" data-cpvalue="25" data-cpcolor="#33cc33"></div>
 								<h4>Security</h4>
 							</div>
 						</div>
