--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 		<div id="app">
 			<div class="container">
 
-				<div v-for="(blog) in blogs">
+				<div v-if="blog">
 					<h1>{{blog.title}}</h1>
 					<h2>{{blog.author}}</h2>
 					<h3>{{blog.date}}</h3>
@@ -25,19 +25,21 @@
 			var vm = new Vue({
 				el: '#app',
 				data:{ 
-					blogs: []
+					blog: Object
 				},
 				created: function(){
                     this.fetchBlogs();
                 },
                 methods:{
                     fetchBlogs: function(){
-                        axios.get(url).then(
-                            function(res){
-                                console.log(res.data.blogs);
-                                vm.blogs = res.data.blogs;
-                            }
-                        );
+						//console.log(window.location.search);
+						const urlParams = new URLSearchParams(window.location.search);
+						const id = urlParams.get('blog');
+						//console.log(id);
+                        axios.get('https://capstone-b35a3.firebaseio.com/data/blogs/'+id+'.json').then(res => {
+							console.log(res.data);
+							vm.blog = res.data;
+						});
 					}
 				}
             });
