--- a/characters.html
+++ b/characters.html
@@ -48,7 +48,7 @@
 			<li><a href="index.html#networking">Networking</a></li>
 			<li><a href="index.html#security">Security</a></li>
 			<li><a href="index.html#events">Events</a></li>
-			<li><a href="news.html">Blogs</a></li>
+			<li><a href="blogs.html">Blogs</a></li>
 			<li><a href="characters.html">About Us</a></li>
 			<!--single-post.html blogs-->
 		</ul>
