--- a/single-post.html
+++ b/single-post.html
@@ -46,12 +46,12 @@
 			</a>
 			<ul class="main-menu">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="index.html#programming">Programming</a></li>
-				<li><a href="index.html#cloud">Cloud</a></li>
-				<li><a href="index.html#networking">Networking</a></li>
-				<li><a href="index.html#security">Security</a></li>
+				<li><a href="blogs.html#body">Programming</a></li>
+				<li><a href="blogs.html#body">Cloud</a></li>
+				<li><a href="blogs.html#body">Networking</a></li>
+				<li><a href="blogs.html#body">Security</a></li>
 				<li><a href="index.html#events">Events</a></li>
-				<li><a href="blogs.html">Blogs</a></li>
+				<li><a href="blogs.html#body">Blogs</a></li>
 				<li><a href="characters.html">About Us</a></li>
 				<!--single-post.html blogs-->
 			</ul>
