--- a/characters.html
+++ b/characters.html
@@ -70,26 +70,26 @@
 				<div class="col-lg-7 offset-lg-5">
 					<div class="character-info">
 						<img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Commander</h2>
-						<h5>Mortal Name: Brandon</h5>
-						<h5>Aliases: Xbox_Otaku, Xbot</h5>
-						<br><br><br><br><br><p>The Commander has spent much time in the IT realm. Rumor has it, he was an Assitant Network Administrator at his highschool during his senior year. He has since gone to 2 separate Post-secondary schools to raise his levels of IT skills. The soldier was in charge of the team that created the site you are viewing!</p><br><br><br><br><br>
+						<h2 style="color: #FFFFFF;">The Commander</h2>
+						<h5 style="color: #FFFFFF;">Mortal Name: Brandon</h5>
+						<h5 style="color: #FFFFFF;">Aliases: Xbox_Otaku, Xbot</h5>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The Commander has spent much time in the IT realm. Rumor has it, he was an Assitant Network Administrator at his highschool during his senior year. He has since gone to 2 separate Post-secondary schools to raise his levels of IT skills. The soldier was in charge of the team that created the site you are viewing!</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-1" data-cpvalue="70" data-cpcolor="#33cc33"></div>
-								<h4>Programming</h4>
+								<h4 style="color: #FFFFFF;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-2" data-cpvalue="35" data-cpcolor="#33cc33"></div>
-								<h4>Cloud</h4>
+								<h4 style="color: #FFFFFF;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-3" data-cpvalue="90" data-cpcolor="#33cc33"></div>
-								<h4>Networking</h4>
+								<h4 style="color: #FFFFFF;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-4" data-cpvalue="45" data-cpcolor="#33cc33"></div>
-								<h4>Security</h4>
+								<h4 style="color: #FFFFFF;">Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
@@ -110,26 +110,26 @@
 				<div class="col-lg-7">
 					<div class="character-info">
 						<img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Judge</h2>
-						<h5>Mortal Name: </h5>
-						<h5>Aliases: PavakTheCyphlyn, Marshbird</h5>
-						<br><br><br><br><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
+						<h2 style="color: #FFFFFF;">The Judge</h2>
+						<h5 style="color: #FFFFFF;">Mortal Name: </h5>
+						<h5 style="color: #FFFFFF;">Aliases: PavakTheCyphlyn, Marshbird</h5>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-5" data-cpvalue="30" data-cpcolor="#33cc33"></div>
-								<h4>Programming</h4>
+								<h4 style="color: #FFFFFF;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-6" data-cpvalue="45" data-cpcolor="#33cc33"></div>
-								<h4>Cloud</h4>
+								<h4 style="color: #FFFFFF;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-7" data-cpvalue="85" data-cpcolor="#33cc33"></div>
-								<h4>Networking</h4>
+								<h4 style="color: #FFFFFF;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-8" data-cpvalue="40" data-cpcolor="#33cc33"></div>
-								<h4>Security</h4>
+								<h4 style="color: #FFFFFF;">Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
@@ -150,26 +150,26 @@
 				<div class="col-lg-7">
 					<div class="character-info">
 						<br><br><img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Princess</h2>
-						<h5>Mortal Name: Winter</h5>
-						<h5>Aliases: Wandering Winter, Disnerdgal, Phoenix Holmes</h5>
-						<br><br><br><br><br><p>The princess was born into a kingdom of code and technology. She has been trained in its ways by the king of the land from a young age. She hopes to make a pact with the kingdom of cloud technologies to learn their ways. Despite hating coffee and snakes, she loves Java and Python programming. The princess took charge and completed the back-end code for this site.</p><br><br><br><br><br>
+						<h2 style="color: #FFFFFF;">The Princess</h2>
+						<h5 style="color: #FFFFFF;">Mortal Name: Winter</h5>
+						<h5 style="color: #FFFFFF;">Aliases: Wandering Winter, Disnerdgal, Phoenix Holmes</h5>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The princess was born into a kingdom of code and technology. She has been trained in its ways by the king of the land from a young age. She hopes to make a pact with the kingdom of cloud technologies to learn their ways. Despite hating coffee and snakes, she loves Java and Python programming. The princess took charge and completed the back-end code for this site.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-9" data-cpvalue="90" data-cpcolor="#33cc33"></div>
-								<h4>Programming</h4>
+								<h4 style="color: #FFFFFF;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-10" data-cpvalue="25" data-cpcolor="#33cc33"></div>
-								<h4>Cloud</h4>
+								<h4 style="color: #FFFFFF;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-11" data-cpvalue="30" data-cpcolor="#33cc33"></div>
-								<h4>Networking</h4>
+								<h4 style="color: #FFFFFF;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-12" data-cpvalue="25" data-cpcolor="#33cc33"></div>
-								<h4>Security</h4>
+								<h4 style="color: #FFFFFF;">Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
