--- a/single-post.html
+++ b/single-post.html
@@ -125,9 +125,9 @@
 										<div class="ln-index"><center>{{eventItem.date}}<br>{{eventItem.year}}</center></div>
 										<img src="img/blog-thumbs/1.jpg" alt="">
 										<div class="ln-text">
-											<h6 style="font-size: 22px;">{{eventItem.name}}</h6>
+											<h6 style="font-size: 22px; font-weight: bold;">{{eventItem.name}}</h6>
 											<div class="ln-metas">
-												<div class="ln-meta" style="font-size: 20px;">{{eventItem.description}}</div><br>
+												<div class="ln-meta" style="font-size: 16px; color: #FFFFFF;">{{eventItem.description}}</div><br>
 												<!--if's-->
 												<div class="ln-meta" v-if="eventItem.tag == 'Programming'">
 													<a href="#" style="color: #5da9e4; font-size: 20px;">{{eventItem.tag}}</a></div>
