--- a/characters.html
+++ b/characters.html
@@ -50,7 +50,6 @@
 			<li><a href="blogs.html#body">Events</a></li>
 			<li><a href="blogs.html#body">Blogs</a></li>
 			<li><a href="characters.html">About Us</a></li>
-			<!--single-post.html blogs-->
 		</ul>
 	</header>
 	<!-- Header section end -->
@@ -77,22 +76,21 @@
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-1" data-cpvalue="70" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Programming</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-2" data-cpvalue="35" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Cloud</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-3" data-cpvalue="90" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Networking</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-4" data-cpvalue="45" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Security</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Security</h4>
 							</div>
 						</div>
-						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -117,22 +115,21 @@
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-5" data-cpvalue="30" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Programming</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-6" data-cpvalue="45" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Cloud</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-7" data-cpvalue="85" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Networking</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-8" data-cpvalue="40" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Security</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Security</h4>
 							</div>
 						</div>
-						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -157,19 +154,19 @@
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-9" data-cpvalue="90" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Programming</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Programming</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-10" data-cpvalue="25" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Cloud</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Cloud</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-11" data-cpvalue="30" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Networking</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Networking</h4>
 							</div>
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-12" data-cpvalue="25" data-cpcolor="#33cc33"></div>
-								<h4 style="color: #FFFFFF;">Security</h4>
+								<h4 style="color: #FFFFFF; font-size: 20px;">Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
