--- a/characters.html
+++ b/characters.html
@@ -109,9 +109,9 @@
 					<div class="character-info">
 						<img src="img/game-characters/title-icon.png" alt="">
 						<h2 style="color: #FFFFFF;">The Judge</h2>
-						<h5 style="color: #FFFFFF;">Mortal Name: </h5>
+						<h5 style="color: #FFFFFF;">Mortal Name: Marshal Evan</h5>
 						<h5 style="color: #FFFFFF;">Aliases: PavakTheCyphlyn, Marshbird</h5>
-						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The judge resides in the land of technical wonders and enjoys deconstructing and reconstructing various plans for projects to better the kingdom. They have taken up many different mantles, simply trying to find the one that fits the best. Someday soon, they hope to create beautiful artworks to cover the kingdom in from way of digital craftsmanship.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-5" data-cpvalue="30" data-cpcolor="#33cc33"></div>
