--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="loader"></div>
 	</div>
 	<header class="header-section">
-		<a href="index.html" class="site-logo">
+		<a href="test.html" class="site-logo">
 			<img src="img/logoGoodlyDid.png" alt="logo">
 		</a>
 		<ul class="main-menu">
