--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
 	</header>
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
-			<div class="hero-item set-bg" data-setbg="img/slider/1.jpg">
+			<div class="hero-item set-bg" data-setbg="img/TwitchPic11.png">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 offset-lg-1">
