--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
 	</header>
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
-			<div class="hero-item set-bg" data-setbg="img/TwitchPic11.png">
+			<div class="hero-item set-bg" data-setbg="img/slider/1.jpg">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 offset-lg-1">
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="sb-item">
-								<img src="img/blog-thumbs/7.jpg" alt="">
+								<img src="img/TwitchPic1.png" alt="">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Cloud#body" id="cloud" class="hoverCarText" style="font-size: 25px; color: #ff5581;">Cloud</a></h6>
 									<div class="sb-metas" style="cursor: default;">
