--- a/blogs.html
+++ b/blogs.html
@@ -127,7 +127,7 @@
 								<div v-for="eventItem in eventsArray" class="ln-item">
 									<div v-if="eventItem.date == 'N/A'" class="ln-index"><center>TBA</center></div>
 									<div v-else class="ln-index"><center>{{eventItem.date}}<br>{{eventItem.year}}</center></div>
-									<img src="img/blog-thumbs/1.jpg" alt="">
+									<img :src="event.icon" :alt="event.alt">
 									<div class="ln-text">
 										<h6 style="font-size: 20px; font-weight: bold;">{{eventItem.name}}</h6>
 										<div class="ln-metas">
@@ -147,12 +147,12 @@
 												<div class="ln-meta" v-if="eventItem.tag == 'Other'">
 													<a href="byTag.html?tag=Other#body" style="color: #ff94f3; font-size: 20px;">{{eventItem.tag}}</a>
 												</div>
-												<!--<span v-if="eventItem.blogLink != 'N/A'">
+												<span v-if="eventItem.blogLink != 'N/A'">
 													<a :href="eventItem.blogLink">Read Our Blog</a>
 												</span><br>
 												<span v-if="eventItem.eventLink != 'N/A'">
 													<a :href="eventItem.eventLink">Learn More</a>
-												</span>-->
+												</span
 										</div>
 									</div>
 								</div>
