--- a/blogs.html
+++ b/blogs.html
@@ -151,7 +151,7 @@
 													<a :href="eventItem.blogLink">Read Our Blog</a>
 												</span><br>
 												<span v-if="eventItem.eventLink != 'N/A'">
-													<a :href="eventItem.eventLink">Learn More</a>
+													<a :href="eventItem.eventLink" class="hoverCarText">Learn More</a>
 												</span
 										</div>
 									</div>
