--- a/byTag.html
+++ b/byTag.html
@@ -133,11 +133,10 @@
 											<div class="ln-meta" style="font-size: 16px; color: #FFFFFF;">{{eventItem.description}}</div><br>
 											<span v-if="eventItem.blogLink != 'N/A'">
 												<a :href="eventItem.blogLink">Read Our Blog</a>
-											</span><br>
+											</span><br></div>
 											<span v-if="eventItem.eventLink != 'N/A'">
-												<a :href="eventItem.eventLink" class="hoverCarText">Learn More</a>
+												<a :href="eventItem.eventLink" class="site-btn">Learn More</a><br><br>
 											</span>
-										</div>
 									</div>
 								</div>
 							</div>
