--- a/blogs.html
+++ b/blogs.html
@@ -149,11 +149,10 @@
 												</div>
 												<span v-if="eventItem.blogLink != 'N/A'">
 													<a :href="eventItem.blogLink">Read Our Blog</a>
-												</span><br>
+												</span><br></div>
 												<span v-if="eventItem.eventLink != 'N/A'">
-													<a :href="eventItem.eventLink" class="hoverCarText">Learn More</a>
+													<a :href="eventItem.eventLink" class="site-btn">Learn More</a><br><br>
 												</span
-										</div>
 									</div>
 								</div>
 							</div>
