--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="col-lg-8">
 						<div class="small-blog-list">
 							<div class="sb-item">
-								<img src="img/blog-thumbs/6.jpg" alt="">
+								<img src="img/programming_icon.jpg" alt="Image of Code on Computer Screen">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Programming#body" id="programming" class="hoverCarText" style="font-size: 25px; color: #5da9e4;">Programming</a></h6>
 									<div class="sb-metas" style="cursor: default;">
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="sb-item">
-								<img src="img/blog-thumbs/7.jpg" alt="">
+								<img src="img/cloud_icon.jpg" alt="Cloud Computing Image">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Cloud#body" id="cloud" class="hoverCarText" style="font-size: 25px; color: #ff5581;">Cloud</a></h6>
 									<div class="sb-metas" style="cursor: default;">
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 							<div class="sb-item">
-								<img src="img/blog-thumbs/8.jpg" alt="">
+								<img src="img/network_icon.jpg" alt="Server Networking Image">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Networking#body" id="networking" class="hoverCarText" style="font-size: 25px; color: #bd9bd2;">Networking</a></h6>
 									<div class="sb-metas" style="cursor: default;">
@@ -180,7 +180,7 @@
 								</div>
 							</div>
 							<div class="sb-item">
-								<img src="img/blog-thumbs/9.jpg" alt="">
+								<img src="img/security_icon.jpg" alt="Security Image">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Security#body" id="security" class="hoverCarText" style="font-size: 25px; color: #33cc33;">Security</a></h6>
 									<div class="sb-metas" style="cursor: default;">
