--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="col-lg-8">
 						<div class="small-blog-list">
 							<div class="sb-item">
-								<img src="img/programming_icon.jpg" alt="Image of Code on Computer Screen">
+								<img src="img/programming_icon.png" alt="Image of Code on Computer Screen">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Programming#body" id="programming" class="hoverCarText" style="font-size: 25px; color: #5da9e4;">Programming</a></h6>
 									<div class="sb-metas" style="cursor: default;">
