--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="sb-item">
-								<img src="img/cloud_icon.png" alt="Cloud Computing Image">
+								<img src="img/cloud_icon.jpg" alt="Cloud Computing Image">
 								<div class="sb-text">
 									<h6><a href="byTag.html?tag=Cloud#body" id="cloud" class="hoverCarText" style="font-size: 25px; color: #ff5581;">Cloud</a></h6>
 									<div class="sb-metas" style="cursor: default;">
