--- a/characters.html
+++ b/characters.html
@@ -111,7 +111,7 @@
 						<h2 style="color: #FFFFFF;">The Judge</h2>
 						<h5 style="color: #FFFFFF;">Mortal Name: Marshal Evan</h5>
 						<h5 style="color: #FFFFFF;">Aliases: PavakTheCyphlyn, Marshbird</h5>
-						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The judge resides in the land of technical wonders and enjoys deconstructing and reconstructing various plans for projects to better the kingdom. They have taken up many different mantles, simply trying to find the one that fits the best. Someday soon, they hope to create beautiful artworks to cover the kingdom in from way of digital craftsmanship.</p><br><br><br><br><br>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The judge resides in the land of technical wonders and enjoys deconstructing and reconstructing various plans for projects to better the kingdom. They have taken up many different mantles, simply trying to find the one that fits the best. Someday soon, they hope to create beautiful artworks to cover the kingdom in by way of digital craftsmanship.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-5" data-cpvalue="30" data-cpcolor="#33cc33"></div>
@@ -150,7 +150,7 @@
 						<h2 style="color: #FFFFFF;">The Princess</h2>
 						<h5 style="color: #FFFFFF;">Mortal Name: Winter</h5>
 						<h5 style="color: #FFFFFF;">Aliases: Wandering Winter, Disnerdgal, Phoenix Holmes</h5>
-						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The princess was born into a kingdom of code and technology. She has been trained in its ways by the king of the land from a young age. She hopes to make a pact with the kingdom of cloud technologies to learn their ways. Despite hating coffee and snakes, she loves Java and Python programming. The princess took charge and completed the back-end code for this site.</p><br><br><br><br><br>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The princess was born into a kingdom of code and technology. She has been trained in its ways by the king of the land from a young age. She hopes to make a pact with the kingdom of cloud technologies to learn their ways. Despite hating coffee and snakes, she loves Java and Python programming! The Princess took charge and completed the back-end code for this site.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-9" data-cpvalue="90" data-cpcolor="#33cc33"></div>
