--- a/characters.html
+++ b/characters.html
@@ -72,7 +72,7 @@
 						<h2 style="color: #FFFFFF;">The Commander</h2>
 						<h5 style="color: #FFFFFF;">Mortal Name: Brandon</h5>
 						<h5 style="color: #FFFFFF;">Aliases: Xbox_Otaku, Xbot</h5>
-						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The Commander has spent much time in the IT realm. Rumor has it, he was an Assitant Network Administrator at his high school during his senior year. He has since gone to two different post-secondary schools to raise his IT stats. The Commander was in charge of the team that created the site you are using!</p><br><br><br><br><br>
+						<br><br><br><br><br><p style="font-size: 20px; color: #FFFFFF;">The Commander has spent much time in the IT realm. Rumor has it, he was an Assitant Network Administrator at his high school during his senior year. He has since gone to two different post-secondary schools to raise his IT stats. The Commander was responsible for the front-end programming and was in charge of the team that created the site you are using!</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
 								<div class="circle-progress" data-cpid="id-1" data-cpvalue="70" data-cpcolor="#33cc33"></div>
